# DeepOBS

./: .conda_env.yml  .flake8  .gitignore  .mailmap  .travis.yml  AUTHORS.md  CHANGELOG.md  LICENSE.txt  README-dev.md  README.md  SGD.py  __init__.py  example_analyze.py  example_analyze_tensorflow.py  example_gp_tuner.py  example_grid_search.py  example_momentum_runner.py  example_momentum_runner_pytorch.py  example_momentum_runner_tensorflow.py  example_random_search.py  makefile  pyproject.toml  report.txt  requirements.txt  requirements_doc.txt  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: CI.yml  linting.yml
baselines/: convergence_performance.json
baselines_deepobs/: LICENSE  README.md
deepobs/: __init__.py  config.py  dataset_utils.py  info.py  plot_utils.py  run_utils.py  version.py
deepobs/abstract_runner/: __init__.py  abstract_runner.py  abstract_runner_utils.py
deepobs/analyzer/: __init__.py  analyze.py  analyze_utils.py  shared_utils.py
deepobs/benchmark_automation/: __init__.py  automation.py
deepobs/cifar10/: __init__.py  cifar10_3c3d.py  cifar10_input.py  cifar10_vgg16.py  cifar10_vgg19.py
deepobs/cifar100/: __init__.py  _cifar100_wrn.py  cifar100_3c3d.py  cifar100_allcnnc.py  cifar100_input.py  cifar100_vgg16.py  cifar100_vgg19.py  cifar100_wrn.py  cifar100_wrn404.py
deepobs/datasets/: __init__.py  info.py
deepobs/fmnist/: __init__.py  fmnist_2c2d.py  fmnist_input.py  fmnist_logreg.py  fmnist_mlp.py  fmnist_vae.py
docs/: Makefile  conf.py  index.rst
examples/: analyzer.py  runner_momentum_pytorch.py  runner_momentum_tensorflow.py  runner_sgd_pytorch.py  tuner_bayes_pytorch.py  tuner_gridsearch_pytorch.py  tuner_randomsearch_pytorch.py
pytorch_docs/: conf.py  index.rst
requirements/: test.txt
scripts/: deepobs_estimate_runtime.py  deepobs_plot_results.py  deepobs_prepare_data.sh  deepobs_run_adam.py  deepobs_run_momentum.py  deepobs_run_sgd.py
tests/: __init__.py  check_image_datasets.py  check_image_datasets_old.py  check_text_datasets.py  test_testproblems.py
(+2447 files in other folders)
