[build-system] # https://setuptools.readthedocs.io/en/latest/build_meta.html
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py35', 'py36', 'py37']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.pytest_cache
    | \.benchmarks
    | docs_src
    | docs
    | build
    | dist
    | env
  )/
)
'''
